[package]
name = "boilerfiles"
version = "0.1.0"
authors = ["Jan Müller <janmueller3698@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A CLI for download boilerplate files."
homepage = "https://github.com/DerYeger/boilerfiles"
repository = "https://github.com/DerYeger/boilerfiles"
keywords = ["cli", "boilerplate", "files", "downloading"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.2"
error-chain = "0.12.4"
home = "0.5.3"
reqwest = { version = "0.11.11", features =["blocking", "json"] }
serde = { version = "1.0.144", features = ["derive"] }
